Divide architecture docs page in two

--- a/docs-v2/understand/concepts/actions.mdx
+++ b/docs-v2/understand/concepts/actions.mdx
@@ -26,7 +26,7 @@ Action executions are transient, with no data persistence on Nango's part. This 
 Actions are defined with explicit input parameters and output responses. These schemas are meticulously outlined as models within the [integration configuration](/understand/concepts/integration-configuration), ensuring clarity and consistency in data handling.
 
 ### Endpoint Access 
-Once enabled, actions are accessible through specific endpoints, each with an automatically generated API reference available in the [Nango UI](/understand/concepts/ui). This setup facilitates easy integration and execution of actions within your application.
+Once enabled, actions are accessible through specific endpoints, each with an automatically generated API reference available in the Nango UI. This setup facilitates easy integration and execution of actions within your application.
 
 ### Immediate Feedback
 
