--- a/docs-v2/understand/concepts/connections.mdx
+++ b/docs-v2/understand/concepts/connections.mdx
@@ -10,7 +10,7 @@ Connections link your customers and the APIs they've authorized access to, assoc
 # Credential management
 The type of credentials stored within a connection depends on the integration's authorization method (OAuth, API Key, Basic Auth, Custom). For OAuth, for instance, the connection will hold the access token, refresh token, access token expiration date, among other details, enabling API requests on behalf of the customer.
 
-Connections also maintain the raw credentials as returned by the external API, which may include additional API-specific information. These raw credentials can be viewed or fetched through the [Nango UI](/understand/concepts/ui) and [API](/reference/overview).
+Connections also maintain the raw credentials as returned by the external API, which may include additional API-specific information. These raw credentials can be viewed or fetched through the Nango UI and [API](/reference/overview).
 
 # Connection identifier
 When setting up a connection, you'll specify an identifier (often the customer ID) to later retrieve the connection. This ID is unique within an integration context but can be reused across different integrations.
