--- a/docs-v2/understand/concepts/integrations.mdx
+++ b/docs-v2/understand/concepts/integrations.mdx
@@ -8,7 +8,7 @@ description: 'Learn more about integrations.'
 An Integration within Nango is essentially your product's setup for connecting to an external API on your customers' behalf. It's how you configure Nango to interact with services like GitHub, Slack, or any other external platform that your product needs to integrate with.
 
 # Creating integrations
-Creating an integration is straightforward and only takes a few clicks in the [Nango UI](/understand/concepts/ui). Whether for GitHub, Slack, or any other service, you'll set up one integration per service.
+Creating an integration is straightforward and only takes a few clicks in the Nango UI. Whether for GitHub, Slack, or any other service, you'll set up one integration per service.
 
 Each integration has a unique identifier you can see and edit in the settings on the Nango UI.
 
