Initial scripts docs content
Add scripts docs page

--- a/docs-v2/customize/guides/advanced/migrate-integration-configuration.mdx
+++ b/docs-v2/customize/guides/advanced/migrate-integration-configuration.mdx
@@ -4,7 +4,7 @@ sidebarTitle: 'Migrate to the new nango.yaml schema'
 description: 'Step-by-step guide to migrate to the new integration configuration.'
 ---
 
-Nango created a new integration configuration (`nango.yaml`) schema in February 2024. Learn about its [benefits](/understand/concepts/integration-configuration).
+Nango created a new integration configuration (`nango.yaml`) schema in February 2024. Learn about its [benefits](/understand/concepts/scripts#integration-configuration).
 
 To migrate to it: 
 - update the Nango CLI to the latest version
