--- a/docs-v2/customize/guides/extend-an-integration-template.mdx
+++ b/docs-v2/customize/guides/extend-an-integration-template.mdx
@@ -8,7 +8,7 @@ Nango publishes [integration templates](/understand/concepts/templates) for the 
 
 Here is the [list of publicly available integration templates](/integrations/overview).
 
-You can activate template integrations directly in the Nango UI to get started fast. But if you want to edit their code or configuration, you must pull them in your [integrations folder](/understand/concepts/integrations-folder) as described below.
+You can activate template integrations directly in the Nango UI to get started fast. But if you want to edit their code or configuration, you must pull them in your [integrations folder](/understand/concepts/scripts#integration-folder) as described below.
 
 <Info>
 Pre-requisite: set up an integrations folder ([step-by-step guide](/customize/guides/setup)).
