--- a/docs-v2/customize/guides/setup.mdx
+++ b/docs-v2/customize/guides/setup.mdx
@@ -4,7 +4,7 @@ sidebarTitle: 'Set up the CLI and folder'
 description: 'Step-by-step guide to setting up the Nango CLI and integrations folder.'
 ---
 
-Set up the [Nango CLI](/understand/concepts/cli) and an [integration folder](/understand/concepts/integrations-folder) to develop custom integrations with Nango.
+Set up the [Nango CLI](/understand/concepts/scripts#the-nango-cli) and an [integration folder](/understand/concepts/scripts#integration-folder) to develop custom integrations with Nango.
 
 # Install the Nango CLI
 
@@ -32,7 +32,7 @@ NANGO_SECRET_KEY_DEV='<DEV-SECRET-KEY>'
 
 Get your secret keys from the _Environment Settings_ tab (toggle between the `Production` and `Development` environment in the left nav bar).
 
-Learn more about the [Nango CLI](/understand/concepts/cli) ([reference](/reference/cli)) and the content of the [integrations folder](/understand/concepts/integrations-folder).
+Learn more about the [Nango CLI](/understand/concepts/scripts#the-nango-cli) ([reference](/reference/cli)) and the content of the [integrations folder](/understand/concepts/scripts#integration-folder).
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
