--- a/docs-v2/reference/api-configuration.mdx
+++ b/docs-v2/reference/api-configuration.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'APIs configuration (providers.yaml)'
-sidebarTitle: 'APIs config (providers.yaml)'
+title: 'API configuration (providers.yaml)'
+sidebarTitle: 'API config (providers.yaml)'
 icon: 'network-wired'
 ---
 
