--- a/docs-v2/reference/scripts.mdx
+++ b/docs-v2/reference/scripts.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Integration Scripts'
-sidebarTitle: 'Integration Scripts'
+title: 'Scripts'
+sidebarTitle: 'Scripts'
 icon: 'code'
 ---
 
