--- a/docs-v2/understand/architecture.mdx
+++ b/docs-v2/understand/architecture.mdx
@@ -30,7 +30,7 @@ Runner services, built on Node, are isolated per customer and responsible for ru
 
 **Records Storage**
 
-This storage component persists the records synced by the runners, conforming to the specific models defined in the [integration configurations](/understand/concepts/integration-configuration) and supporting the unified API's data retrieval needs.
+This storage component persists the records synced by the runners, conforming to the specific models defined in the [integration configurations](/understand/concepts/scripts#integration-configuration) and supporting the unified API's data retrieval needs.
 
 **Script Storage**
 
