--- a/docs-v2/understand/concepts/proxy.mdx
+++ b/docs-v2/understand/concepts/proxy.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'The Proxy'
-sidebarTitle: 'The Proxy'
+title: 'Proxy'
+sidebarTitle: 'Proxy'
 description: 'Learn more about the Nango Proxy.'
 ---
 
@@ -8,14 +8,15 @@ description: 'Learn more about the Nango Proxy.'
 
 Nango's Proxy simplifies making authenticated requests to external APIs. It’s a tool designed to save you time and reduce complexity in your interactions with APIs.
 
-# Key Features
+# Key features
+
 - **Automatic Credential Injection:** Automatically adds necessary authentication to your API requests.
 - **Base URL Setup:** Automatically determines and sets the correct base URL for your API requests.
 - **Effortless Pagination:** Simplifies dealing with API pagination ([step-by-step guide](/customize/guides/advanced/paginate-api-responses)).
 - **Logs for Debugging:** Tracks your requests in the Activity tab for easy debugging.
 - **Rate-limit Management:** Handles rate limits with smart retries ([step-by-step guide](/customize/guides/advanced/handle-rate-limits)).
 
-# Use Cases
+# Use cases
 
 The Proxy is useful to perform any individual request to external APIs, e.g.
 
