--- a/docs-v2/understand/concepts/templates.mdx
+++ b/docs-v2/understand/concepts/templates.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Integration templates'
-sidebarTitle: 'Integration templates'
+title: 'Templates'
+sidebarTitle: 'Templates'
 description: 'Learn more about integration templates.'
 ---
 
