Gong API changes

--- a/docs-v2/integrations/all/gong.mdx
+++ b/docs-v2/integrations/all/gong.mdx
@@ -24,6 +24,7 @@ Gong offers both Basic auth (API key) and OAuth as authentication. Nango impleme
 -   [How to find API credentials (for end-users)](https://help.gong.io/hc/en-us/articles/360042449451-Receive-access-to-the-API)
 -   [Request a developer account to create an OAuth app](https://app.gong.io/welcome/developer/sign-up)
 -   [API Docs](https://app.gong.io/settings/api/documentation#overview)
+-   [Oauth-related docs](https://help.gong.io/hc/en-us/articles/13944551222157-Create-an-app-for-Gong)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
@@ -32,5 +33,6 @@ Gong offers both Basic auth (API key) and OAuth as authentication. Nango impleme
 - End users can generate API keys [on the Gong API page](https://app.gong.io/company/api). They must have the "technical administrator" user role to do this.
 - Gong uses BASIC auth for their API, but doesn't call them username and password: `Access Key` is the username in Nango and `Access Key Secret` is the password in Nango.
 - [Gong rate-limits](https://app.gong.io/settings/api/documentation#overview) are per second and a total of 10k requests a day.
+- Gong-oauth uses `api_base_url_for_customer`, which varies for each customer, as its `base_url` for proxy requests. This parameter is returned in the response of `generate-customer-token`.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/gong.mdx)</Note>
