--- a/docs-v2/integrate/guides/sync-data-from-an-api.mdx
+++ b/docs-v2/integrate/guides/sync-data-from-an-api.mdx
@@ -17,16 +17,16 @@ Select your integration in the _Integrations_ tab, and navigate to the _Scripts_
 Nango will automatically sync the corresponding [records](/understand/concepts/syncs) in the background for each relevant connection.
 
 <Tip>
-Is there no template for your API? Or none matching your exact use case? 
+Is there no template for your API? Or none matching your exact use case?
 
 Learn more about how to [build a custom integration](/customize/guides/create-a-custom-integration), [extend a template](/customize/guides/extend-an-integration-template) or [request custom integrations from Nango experts](/host/managed-integrations).
 </Tip>
 
 # Listen for webhooks from Nango
 
-Nango sends [webhook](/understand/concepts/webhooks) notifications to your backend whenever new data is available. 
+Nango sends [webhook](/understand/concepts/webhooks) notifications to your backend whenever new data is available.
 
-To set this up, go to the _Environment Settings_ tab and configure a _Webhook URL_ to which Nango will send notifications. 
+To set this up, go to the _Environment Settings_ tab and configure a _Webhook URL_ to which Nango will send notifications.
 
 The webhook from Nango is a POST request with the following body ([reference](/reference/webhooks)):
 ```json
@@ -37,7 +37,8 @@ The webhook from Nango is a POST request with the following body ([reference](/r
     "model": "<string>",
     "responseResults": { "<DataModel>": { "added": 123, "updated": 123, "deleted": 123 } },
     "syncType": "INITIAL" | "INCREMENTAL",
-    "queryTimeStamp": "<timestamp>", // Null for initial sync runs.
+    "updatedAfter": "<timestamp>", // Null for initial sync runs.
+    "queryTimeStamp": "<timestamp>" // DEPRECATED: Null for initial sync runs.
 }
 ```
 
@@ -51,7 +52,7 @@ Before using webhooks in production, verify their origin ([step-by-step guide](/
 
 # Fetch the latest data
 
-Upon receiving a webhook notification, the time cursor `queryTimeStamp` from the webhook body is used to fetch only the updated data.
+Upon receiving a webhook notification, the time cursor `updatedAfter` from the webhook body is used to fetch only the updated data.
 
 Fetch records using the backend SDK ([reference](/reference/sdks/node#get-records)) or API ([reference](/reference/api/sync/records-list)).
 
@@ -65,10 +66,10 @@ curl -G https://api.nango.dev/records \
   --header 'Connection-Id: <string>' \
   --header 'Provider-Config-Key: <string>' \
   --data-urlencode 'model=<string>'  # The model of the records to fetch.
-  --data-urlencode 'delta=<queryTimeStamp-from-webhook>' \  # Time cursor to only fetch the updated data.
+  --data-urlencode 'delta=<updatedAfter-from-webhook>' \  # Time cursor to only fetch the updated data.
   --data-urlencode 'limit=<number>' \  # Number of records returned (default: 100).
   --data-urlencode 'cursor=<string>' \  # For pagination: use the "next_cursor" property in the previous page's response.
-  
+
 ```
 </Tab>
 
@@ -83,7 +84,7 @@ const result = await nango.listRecords({
     providerConfigKey: '<string>',
     connectionId: '<string>',
     model: '<string>', //The model of the records to fetch.
-    delta: '<queryTimeStamp-from-webhook>', // Time cursor to only fetch the updated data.
+    updatedAfter: '<updatedAfter-from-webhook>', // Time cursor to only fetch the updated data.
     limit: <number>, // Number of records returned (default: 100).
     cursor: '<string>' // For pagination: use the "next_cursor" property in the previous page's response.
 });
@@ -120,11 +121,11 @@ This returns an array of records conforming to the specified data model. Each re
 
 # Write back to APIs (2-way syncing)
 
-Write back to APIs with actions ([step-by-step guide](/integrate/guides/perform-workflows-with-an-api)) or proxy requests ([step-by-step guide](/integrate/guides/proxy-requests-to-an-api)). 
+Write back to APIs with actions ([step-by-step guide](/integrate/guides/perform-workflows-with-an-api)) or proxy requests ([step-by-step guide](/integrate/guides/proxy-requests-to-an-api)).
 
 # Troubleshoot errors & monitor
 
-Navigate to the _Activity_ tab to inspect potential errors & monitor sync executions. 
+Navigate to the _Activity_ tab to inspect potential errors & monitor sync executions.
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
