--- a/docs-v2/reference/api/sync/records-list.mdx
+++ b/docs-v2/reference/api/sync/records-list.mdx
@@ -4,9 +4,9 @@ sidebarTitle: 'Get records'
 openapi: 'GET /records'
 ---
 
-## The `delta` parameter & webhooks
+## The `updated_after` parameter & webhooks
 
-If you are receiving the webhooks from Nango ([step-by-step guide](/integrate/guides/receive-webhooks-from-nango)), you can use the timestamp you get from the webhook for the `delta` parameter.
+If you are receiving the webhooks from Nango ([step-by-step guide](/integrate/guides/receive-webhooks-from-nango)), you can use the timestamp you get from the webhook for the `updated_after` parameter.
 
 ## Response
 
