--- a/docs-v2/integrate/guides/receive-webhooks-from-nango.mdx
+++ b/docs-v2/integrate/guides/receive-webhooks-from-nango.mdx
@@ -28,7 +28,8 @@ Webhooks from Nango are POST requests with the following body:
     "model": "<string>",
     "responseResults": { "<DataModel>": { "added": 123, "updated": 123, "deleted": 123 } },
     "syncType": "INITIAL" | "INCREMENTAL",
-    "queryTimeStamp": "<timestamp>", // Null for initial sync runs.
+    "updatedAfter": "<timestamp>", // Null for initial sync runs.
+    "queryTimeStamp": "<timestamp>", // DEPRECATED: (use updatedAfter) Null for initial sync runs.
 }
 ```
 </Tab>
