--- a/docs-v2/integrations/all/asana.mdx
+++ b/docs-v2/integrations/all/asana.mdx
@@ -28,4 +28,7 @@ API configuration: [`asana`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
+-   If you are getting `The required parameter client_id is missing or invalid`, you will most likely need to go to Developer Console -> Your app -> Manage distribution -> Change from "Specific workspaces" to "Any workspace"
+
+
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/asana.mdx)</Note>
