--- a/docs-v2/understand/concepts/actions.mdx
+++ b/docs-v2/understand/concepts/actions.mdx
@@ -8,7 +8,7 @@ description: 'Learn more about actions.'
 
 Actions within Nango are designed to facilitate direct workflows with external APIs, such as creating a contact in Hubspot or sending a message via Slack. Unlike [syncs](/understand/concepts/syncs), actions require manual triggering and can provide immediate responses, making them ideally suited for dynamic, real-time interactions.
 
-# Use cases for actions
+# Use cases for Actions
 Actions shine in scenarios requiring two-way syncing or direct data manipulation. For instance, while syncs could be used to regularly import the latest contacts from Hubspot, actions enable the creation or modification of those contacts directly from your application. This capability ensures a seamless flow of information both to and from external services.
 
 # Main characteristics
@@ -59,7 +59,7 @@ export default async function runAction(
 }
 ```
 
-The `runAction` function kicks off when an action is triggered. It takes inputs from the trigger API/SDK request and returns outputs in the response. The `ParameterModel` and `ResponseModel` are configurable via the [integration configuration](TODO BB) and are auto-imported into your script.
+The `runAction` function kicks off when an action is triggered. It takes inputs from the trigger API/SDK request and returns outputs in the response. The `ParameterModel` and `ResponseModel` are configurable via the [integration configuration](/understand/concepts/scripts#integration-configuration) and are auto-imported into your script.
 
 Actions focus solely on immediate tasks without persisting data to Nango's cache, thus calls to `nango.batchSave()`, `nango.batchUpdate()`, and `nango.batchDelete()` are not applicable. However, actions can call other actions, enabling complex workflows through the composition of multiple actions.
 
