--- a/docs-v2/understand/concepts/connections.mdx
+++ b/docs-v2/understand/concepts/connections.mdx
@@ -27,6 +27,6 @@ Connection metadata is heavily used in [syncs](/understand/concepts/syncs). Exec
 
 Besides metadata, connections also include configuration details—set either by Nango during the authorization process or supplied by you ([step-by-step guide](/integrate/guides/authorize-an-api#apis-requiring-connection-specific-configuration-for-authorization)). This includes critical information for the authorization flow, like customer-specific domains required by some external APIs. This configuration ensures smooth authorization and subsequent API interactions, tailored to each customer's specifics.
 
-# Getting started with using connections
+# Getting started with using Connections
 
 Check out the authorization [step-by-step guide](/integrate/guides/authorize-an-api) or refer to the reference ([API](/reference/api/connection/list) / [SDK](/reference/sdks/node#connections)).
