--- a/docs-v2/integrations/other.mdx
+++ b/docs-v2/integrations/other.mdx
@@ -9,6 +9,7 @@ sidebarTitle: Other
 </Tip>
 
 <CardGroup cols={4}>
+    <Card title="Algolia" href="/integrations/all/algolia" color="#68a063" />
     <Card title="Amazon" href="/integrations/all/amazon" color="#68a063" />
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Auth0" href="/integrations/all/auth0" color="#68a063" />
