--- a/docs-v2/integrations/all/stripe-app.mdx
+++ b/docs-v2/integrations/all/stripe-app.mdx
@@ -38,3 +38,5 @@ nango.auth('stripe-app-sandbox', '<CONNECTION-ID>', {params: {appDomain: '<strip
 ## API gotchas
 
 - Stripe app does not return an `expire_at` or `expire_in` value during the exchange of a code for an access token. However, according to the [docs](https://docs.stripe.com/stripe-apps/api-authentication/oauth#refresh-access-token), access tokens expire in one hour, while refresh tokens expire in one year
+
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/stripe-app.mdx)</Note>
