feature(integration): add support for lever-basic-sandbox

--- a/docs-v2/integrations/all/lever.mdx
+++ b/docs-v2/integrations/all/lever.mdx
@@ -3,13 +3,13 @@ title: Lever
 sidebarTitle: Lever
 ---
 
-API configuration: [`lever`](https://nango.dev/providers.yaml), [`lever-sandbox`](https://nango.dev/providers.yaml)
+API configuration: [`lever`](https://nango.dev/providers.yaml), [`lever-basic`](https://nango.dev/providers.yaml), [`lever-sandbox`](https://nango.dev/providers.yaml), [`lever-basic-sandbox`](https://nango.dev/providers.yaml)
 
 ## Features
 
 | Features | Status |
 | - | - |
-| [Auth (OAuth)](/integrate/guides/authorize-an-api) | ✅ |
+| [Auth (OAuth + Basic)](/integrate/guides/authorize-an-api) | ✅ |
 | [Sync data](/integrate/guides/sync-data-from-an-api) | ✅ |
 | [Perform workflows](/integrate/guides/perform-workflows-with-an-api) | ✅ |
 | [Proxy requests](/integrate/guides/proxy-requests-to-an-api) | ✅ |
